--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -33,7 +33,7 @@
         <!-- One -->
         {% include tiles.html %}
 
-        <!-- Two
+        <!-- Two -->
         <section id="two">
             <div class="inner">
                 <header class="major">
@@ -44,9 +44,11 @@
                     <li><a href="landing.html" class="button next">Get Started</a></li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
     </div>
+
+    {% include footer.html %}
 
 </body>
 
