--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,4 +1,6 @@
-<!-- Contact <-->
+<!-- 
+    
+Contact
 <section id="contact">
     <div class="inner">
         <section>
@@ -63,7 +65,7 @@
     </div>
 </section>
 
-<!-- Footer -->
+Footer
 <footer id="footer">
     <div class="inner">
         <ul class="icons">
@@ -88,6 +90,8 @@
 </footer>
 
 </div>
+
+-->
 
 <!-- Scripts -->
 <script src="{{ " assets/js/jquery.min.js" | absolute_url }}"></script>
