--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -17,6 +17,7 @@
         <div class="inner">
             <header class="major">
                 <h1>{{ page.landing-title }}</h1>
+                <h3>{{ page.author}}</h3>
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
