--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -17,7 +17,6 @@
         <div class="inner">
             <header class="major">
                 <h1>{{ page.landing-title }}</h1>
-                <h3>{{ page.author}}</h3>
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
@@ -38,18 +37,18 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>About Me</h2>
+                    <h2>Massa libero</h2>
                 </header>
                 <p>{{ content }}</p>
-                <!-- <ul class="actions">
+                <ul class="actions">
                     <li><a href="landing.html" class="button next">Get Started</a></li>
-                </ul> -->
+                </ul>
             </div>
         </section>
 
     </div>
 
-    <!-- {% include footer.html %} -->
+    {% include footer.html %}
 
 </body>
 
