--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -37,9 +37,12 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>About Me</h2>
+                    <h2>Massa libero</h2>
                 </header>
                 <p>{{ content }}</p>
+                <ul class="actions">
+                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                </ul>
             </div>
         </section>
 
