--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,4 @@
-<!-- 
-Contact
+<!-- Contact -->
 <section id="contact">
 	<div class="inner">
 		<section>
@@ -64,7 +63,7 @@ Contact
 	</div>
 </section>
 
-Footer
+<!-- Footer -->
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
@@ -88,13 +87,12 @@ Footer
 	</footer>
 
 </div>
- -->
 
 <!-- Scripts -->
-<script src="{{ " assets/js/jquery.min.js" | absolute_url }}"></script>
-<script src="{{ " assets/js/jquery.scrolly.min.js" | absolute_url }}"></script>
-<script src="{{ " assets/js/jquery.scrollex.min.js" | absolute_url }}"></script>
-<script src="{{ " assets/js/skel.min.js" | absolute_url }}"></script>
-<script src="{{ " assets/js/util.js" | absolute_url }}"></script>
-<!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
-<script src="{{ " assets/js/main.js" | absolute_url }}"></script>
+	<script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
+	<script src="{{ "assets/js/jquery.scrolly.min.js" | absolute_url }}"></script>
+	<script src="{{ "assets/js/jquery.scrollex.min.js" | absolute_url }}"></script>
+	<script src="{{ "assets/js/skel.min.js" | absolute_url }}"></script>
+	<script src="{{ "assets/js/util.js" | absolute_url }}"></script>
+	<!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
+	<script src="{{ "assets/js/main.js" | absolute_url }}"></script>
