--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- Contact -->
 <section id="contact">
-	<div class="inner">
-		<section>
-			<form action="https://formspree.io/{{ site.email }}" method="POST">
+    <div class="inner">
+        <section>
+            <!-- <form action="https://formspree.io/{{ site.email }}" method="POST">
 				<div class="field half first">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" />
@@ -19,11 +19,11 @@
 					<li><input type="submit" value="Send Message" class="special" /></li>
 					<li><input type="reset" value="Clear" /></li>
 				</ul>
-			</form>
-		</section>
-		<section class="split">
-			<section>
-				<div class="contact-method">
+			</form> -->
+        </section>
+        <section class="split">
+            <section>
+                <!-- <div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Email</h3>
 					<a href="mailto:{{ site.email }}">{{ site.email }}</a>
@@ -57,16 +57,16 @@
 					    {{ site.country }}
 					{% endif %}
 					</span>
-				</div>
-			</section>
-		</section>
-	</div>
+				</div> -->
+            </section>
+        </section>
+    </div>
 </section>
 
 <!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<ul class="icons">
+<footer id="footer">
+    <div class="inner">
+        <!-- <ul class="icons">
 				{% for key_value in site.socials %}
 					{% if key_value[1] %}
 						<li>
@@ -82,17 +82,17 @@
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 				<li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li>
 
-			</ul>
-		</div>
-	</footer>
+			</ul> -->
+    </div>
+</footer>
 
 </div>
 
 <!-- Scripts -->
-	<script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/jquery.scrolly.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/jquery.scrollex.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/skel.min.js" | absolute_url }}"></script>
-	<script src="{{ "assets/js/util.js" | absolute_url }}"></script>
-	<!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
-	<script src="{{ "assets/js/main.js" | absolute_url }}"></script>
+<script src="{{ " assets/js/jquery.min.js" | absolute_url }}"></script>
+<script src="{{ " assets/js/jquery.scrolly.min.js" | absolute_url }}"></script>
+<script src="{{ " assets/js/jquery.scrollex.min.js" | absolute_url }}"></script>
+<script src="{{ " assets/js/skel.min.js" | absolute_url }}"></script>
+<script src="{{ " assets/js/util.js" | absolute_url }}"></script>
+<!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
+<script src="{{ " assets/js/main.js" | absolute_url }}"></script>
