--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -28,26 +28,15 @@ padding-left: 0;
 }
 }
 
-<!-- Main -->
-<div id="main">
-
-    <!-- One -->
-    {% include tiles.html %}
-
-    <!-- Two -->
-    <section id="two">
-        <div class="inner">
-            <header class="major">
-                <h2>About Me</h2>
-            </header>
-            <p>{{ content }}</p>
-        </div>
-    </section>
-
-</div>
-
-{% include footer.html %}
-
-</body>
-
-</html>
+@include breakpoint(xsmall) {
+.copyright {
+li {
+display: block;
+border-left: 0;
+margin-left: 0;
+padding-left: 0;
+line-height: inherit;
+}
+}
+}
+}
