--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -1,42 +1,52 @@
-///
-/// Forty by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
+<!DOCTYPE html>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 
-/* Footer */
+{% include head.html %}
 
-#footer {
-.copyright {
-font-size: 0.8em;
-list-style: none;
-padding-left: 0;
+<body>
 
-li {
-border-left: solid 1px _palette(border);
-color: _palette(fg-light);
-display: inline-block;
-line-height: 1;
-margin-left: 1em;
-padding-left: 1em;
+    {% include header.html %}
 
-&:first-child {
-border-left: 0;
-margin-left: 0;
-padding-left: 0;
-}
-}
-}
+    <!-- Banner -->
+    <section id="banner" class="major">
+        <div class="inner">
+            <header class="major">
+                <h1>{{ page.landing-title }}</h1>
+            </header>
+            <div class="content">
+                <p style="text-transform: uppercase;">{{ site.description }}</p>
+                <ul class="actions">
+                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
-@include breakpoint(xsmall) {
-.copyright {
-li {
-display: block;
-border-left: 0;
-margin-left: 0;
-padding-left: 0;
-line-height: inherit;
-}
-}
-}
-}
+    <!-- Main -->
+    <div id="main">
+
+        <!-- One -->
+        {% include tiles.html %}
+
+        <!-- Two -->
+        <section id="two">
+            <div class="inner">
+                <header class="major">
+                    <h2>About Me</h2>
+                </header>
+                <p>{{ content }}</p>
+            </div>
+        </section>
+
+    </div>
+
+    {% include footer.html %}
+
+</body>
+
+</html>
